--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon src/server.js",
     "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "kleur": "^4.1.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
